fixed ProductCard spacing between title and price

--- a/web/src/components/ProductCard/ProductCard.module.scss
+++ b/web/src/components/ProductCard/ProductCard.module.scss
@@ -1,18 +1,13 @@
 @use '@styles/variables' as *;
 
 .Root {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   cursor: pointer;
+  height: 100%;
 
   &__image {
     width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-  }
-
-  &__footer {
-    display: flex;
-    align-items: flex-end;
   }
 
   &__item {
@@ -22,5 +17,9 @@
   &__item,
   &__price {
     text-transform: uppercase;
+  }
+
+  &__price {
+    margin-top: auto;
   }
 }
